<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">NotifBot</string>
  <string name="service_name">NotifBotService</string>
  <string name="share_receiver_name">Add to NotifBot</string>

  <string name="toast_text_template">%1$s: %2$s</string>
  <string name="receiver_wrong_text">Cannot find app from \"%1$s\".</string>
  <string name="receiver_added_pkg">Added app %1$s.</string>
  <string name="receiver_pkg_exists">App %1$s was already added.</string>

  <string name="main_hint">
    These are the apps you added, click to remove:
    (&lt;a href="https://github.com/fishy/notifbot/blob/master/FAQ.md">How do I add apps?&lt;/a>)
  </string>

  <string name="dialog_title">Confirm</string>
  <string name="dialog_text">
    Are you sure you want to remove the app \"%1$s\" from %2$s?
  </string>
  <string name="dialog_yes">Yes</string>
  <string name="dialog_no">No</string>

  <string name="perm_title">Grant %1$s permission</string>
  <string name="perm_text">
    %1$s needs permission to access your notifications in order to function.
    Please turn it on on the next screen.
  </string>
  <string name="perm_yes">Continue</string>
  <string name="perm_no">No thanks</string>

  <string name="settings">Settings</string>
  <string name="pref_title_auto_dismiss">Auto dismiss notifications</string>
  <string name="pref_desc_auto_dismiss_yes">
    Auto dismiss notifications after they are successfully sent to cloud service.
  </string>
  <string name="pref_desc_auto_dismiss_no">
    Do not auto dismiss notifications.
  </string>
  <string name="pref_title_send_label">Show app name in Telegram messages</string>
  <string name="pref_desc_send_label_yes">
    Also show app name with notification content in Telegram messages.
  </string>
  <string name="pref_desc_send_label_no">
    Do not show app name in Telegram messages, only show notification content.
  </string>

  <string name="pref_tag_about">pref_about</string>
  <string name="pref_header_about">About</string>
  <string name="pref_header_about_summary">NotifBot v0.9.2</string>

  <string name="about">About</string>
  <string name="about_title">
    NotifBot v0.9.2 by Yuxuan \'fishy\' Wang
  </string>
  <string name="about_summary">
    This is an Open Source project.
  </string>
  <string name="credits">Credits</string>
  <string name="credit_icon">
    Part of the icon was from Material Design Icons,
    used under Apache License.
  </string>

  <string name="magic_box">Magic Box</string>
  <string name="magic_text">
    Some examples of things you can put in the magic box below are:

    &lt;ul>
      &lt;li>&amp;nbsp;
      An Android app id:&lt;br />
      com.smartthings.android
      &lt;/li>
      &lt;li>&amp;nbsp;
      A Google Play URL:&lt;br />
      https://play.google.com/store/apps/details?id=com.smartthings.android
      &lt;/li>
      &lt;li>&amp;nbsp;
      A NotifBot URL:&lt;br />
      https://notifbot.fishy.me/c/12345/deadbeef
      &lt;/li>
    &lt;/ul>

    Press back button (or use back gesture) to cancel.
  </string>
  <string name="go">Go</string>
  <string name="magic_invalid_uri">Invalid magic text: \"%1$s\".</string>

  <string name="service_succeed">
    Successfully connected to service!
    You\'ll start getting notification in Telegram from now on.
  </string>
  <string name="no_service">
    Not connected to Telegram bot
  </string>
  <string name="notif_text">
    Please click this notification to connect to Telegram bot.
  </string>
  <string name="service_failed_title">
    Invalid service URL
  </string>
  <string name="service_failed_text">
    Please click %1$s button to re-connect to Telegram bot.
  </string>
  <string name="init_service_text">
    Please click %1$s button to connect to Telegram bot.
  </string>
  <string name="service_net_fail">
    Cannot connect to service due to network failure.
    Please try again later.
  </string>

  <!-- Notification channel -->
  <string name="channel_name">Service connection failure</string>
  <string name="channel_desc">
    The notification to indicate service connection failures.
  </string>
</resources>
